--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
-name = "YOUR-PACKAGE"
-version = "0.1.0"
-description = "ADD DESCRIPTION HERE"
-authors = ["Code Fairies Inc <noreply@santa.com>"]
-license = "GPL-3.0"
+name = "brewblox-homebridge"
+version = "0.0.1"
+description = "Brewblox service that can control Homebridge switches"
+authors = ["Justin Gasper <jmgasper@gmail.com>"]
+license = "BSD"
 readme = "README.md"
 
 [tool.poetry.dependencies]
