--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [pytest]
 asyncio_mode = auto
 addopts =
-    --cov=YOUR_PACKAGE
+    --cov=brewblox_homebridge
     --cov-branch
     --cov-report=term-missing:skip-covered
     --no-cov-on-fail
