--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "brewblox-homebridge"
 version = "0.0.1"
 description = "Brewblox service that can control Homebridge switches"
 authors = ["Justin Gasper <jmgasper@gmail.com>"]
-license = "BSD"
+license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
